:sparkles: FEATURE: Create puzzle model and controller
Signed-off-by: Nouani <nouanigabriel@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.16"
   },
